# aws-base-python

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONSISTENCY_REPORT.md  Dockerfile.apprunner  Dockerfile.eks  Dockerfile.lambda  Makefile  README.md  pyproject.toml  pyproject.toml.example
.github/workflows/: deploy-apprunner.yaml  deploy-eks.yaml  deploy-lambda.yaml  release-please.yml
backend/: Dockerfile.apprunner  Dockerfile.eks  Dockerfile.lambda  pyproject.toml.example
backend/api/: __init__.py  main.py  pyproject.toml  test_main.py
backend/tests/: __init__.py  test_main.py
bootstrap/: apprunner.tf  ecr.tf  eks.tf  lambda.tf  main.tf  networking.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: API-ENDPOINTS.md  CONSISTENCY-REVIEW.md  DOCKER-MULTIARCH.md  INCREMENTAL-ADOPTION.md  INSTALLATION.md  MONITORING.md  PRE-COMMIT.md  RELEASE-PLEASE.md  SCRIPTS.md  TERRAFORM-BOOTSTRAP.md
k8s/: README.md
k8s/api/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
scripts/: docker-push.sh  generate-workflows.sh  setup-pre-commit.sh  setup-terraform-backend.sh  setup-terraform-lambda.sh  sync-tfvars-to-env.py
src/: main.py
terraform/: README.md  api-gateway.tf  lambda.tf  main.tf  outputs.tf  variables.tf
terraform/environments/: dev-backend.hcl  dev.tfvars  prod-backend.hcl  prod.tfvars  test-backend.hcl  test.tfvars
