# =============================================================================
# Root Project Configuration
# =============================================================================
# This file provides development tools for the entire project (pre-commit, etc.)
# Individual services have their own pyproject.toml files in backend/*/
# =============================================================================

[project]
name = "aws-base-dev"
version = "0.1.0"
description = "Development tools for AWS Bootstrap Infrastructure"
readme = "README.md"
requires-python = ">=3.13"

# Development dependencies for the entire project
# Note: Dependencies are in the main list since we always need them for dev
dependencies = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "pyright>=1.1.300",
]

[tool.ruff]
# Ruff configuration - applies to all Python files in the project
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyright]
# Pyright configuration
pythonVersion = "3.13"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
