# =============================================================================
# API Service - Python Project Configuration
# =============================================================================
# This file defines runtime dependencies for the API service
# Dev dependencies (ruff, pyright, pre-commit) are in the root pyproject.toml
# =============================================================================

[project]
name = "api"
version = "0.1.0"
description = "API service for AWS deployment"
requires-python = ">=3.13"

# Production dependencies only
dependencies = [
    # Web framework
    "fastapi>=0.115.0,<0.116.0",

    # ASGI server
    "uvicorn[standard]>=0.32.0,<0.33.0",

    # Lambda adapter for ASGI frameworks
    "mangum>=0.18.0,<0.19.0",

    # AWS SDK
    "boto3>=1.35.0,<2.0.0",
    "botocore>=1.35.0,<2.0.0",

    # HTTP client
    "httpx>=0.27.0,<0.28.0",

    # Data validation
    "pydantic>=2.9.0,<3.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",

    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
# Test dependencies for this service
test = [
    "pytest>=8.3.0,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "pytest-asyncio>=0.24.0,<0.25.0",
]

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-branch",
]

# =============================================================================
# Coverage Configuration
# =============================================================================

[tool.coverage.run]
source = ["."]
branch = true
omit = ["test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
